[package]
name = "display_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.26.2", path = "../egui/crates/eframe/"}
egui = {version = "0.26.2", path = "../egui/crates/egui/"}
egui_plot = {version = "0.26.2", path = "../egui/crates/egui_plot/"}
